--- a/Mcba.Bll/Mcba.Bll.csproj
+++ b/Mcba.Bll/Mcba.Bll.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Permiso.cs" />
     <Compile Include="PermisoBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestConexionBll.cs" />
     <Compile Include="UserBll.cs" />
     <Compile Include="Helpers\UserNameGeneratorHelper.cs" />
     <Compile Include="UserLogged.cs" />
