--- a/Mcba.Dal/Mcba.Dal.csproj
+++ b/Mcba.Dal/Mcba.Dal.csproj
@@ -56,6 +56,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="TestConexionDal.cs" />
     <Compile Include="UserDal.cs" />
   </ItemGroup>
   <ItemGroup>
