--- a/Mcba.Infraestruture/Mcba.Infraestruture.csproj
+++ b/Mcba.Infraestruture/Mcba.Infraestruture.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Enums\ToolbarStatusEnum.cs" />
     <Compile Include="Enums\LanguageEnum.cs" />
+    <Compile Include="Helpers\BaseDataHelper.cs" />
     <Compile Include="Helpers\MailHelper.cs" />
     <Compile Include="Helpers\OpenFormsHelper.cs" />
     <Compile Include="Settings\InstanceSettings.cs" />
