--- a/Mcba.UI/Mcba.UI.csproj
+++ b/Mcba.UI/Mcba.UI.csproj
@@ -95,6 +95,12 @@
     <Compile Include="Busqueda.Designer.cs">
       <DependentUpon>Busqueda.cs</DependentUpon>
     </Compile>
+    <Compile Include="CambioCns.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CambioCns.Designer.cs">
+      <DependentUpon>CambioCns.cs</DependentUpon>
+    </Compile>
     <Compile Include="CambioPassword.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -284,6 +290,9 @@
     <EmbeddedResource Include="Busqueda.resx">
       <DependentUpon>Busqueda.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CambioCns.resx">
+      <DependentUpon>CambioCns.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CambioPassword.resx">
       <DependentUpon>CambioPassword.cs</DependentUpon>
     </EmbeddedResource>
@@ -386,7 +395,7 @@
       <DependentUpon>ViewBase.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Data.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Mcba.Entidad.Dto.BitacoraDto.datasource" />
